# BLDC

./: sdkconfig.old  test.c
main/: CMakeLists.txt  main.c
main/APP/: APP_MOT_CTRL.c
main/CFG/: BOARD_CFG.h
main/HAL/: LL_TIMERS.c
